Workbook 1.1
  new stuff
  - set properties of child figures within groups
  - text wrap
  - added "Export Selection to Image" function
  - allow more then one instance of workbook to run at one time
  - added "show" command line option to show another running instance of workbook if there is one
  - added check for DotNet framework version 2 in installer (and prompt to download if not present)
  - installer sets Inifile->Zoom option to "FitToWidth"

  bug fixes
  - stop application closing aberrantly when screen annotation form is closed
