@@ -7,6 +7,7 @@ Workbook 1.1
   - added "show" command line option to show another running instance of workbook if there is one
   - added check for DotNet framework version 2 in installer (and prompt to download if not present)
   - installer sets Inifile->Zoom option to "FitToWidth"
+  - improved WFViewer scrollbars (including reduced flickering and not showing when they should not)
 
   bug fixes
   - stop application closing aberrantly when screen annotation form is closed
